--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
+/node_modules
+node_modules/
 /.pnp
 .pnp.js
 
@@ -13,14 +14,39 @@ node_modules
 
 # misc
 .DS_Store
-.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Environment variables
+.env
+
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Editor directories and files
+.idea
+.vscode
+*.swp
+*.swo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# Custom
 /prompts
